<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="includeDB" type="com.example.yeongpyo.androidStudyCoinHelper.CoinViewModel"/>
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/CurrentPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />

    <TextView
        android:id="@+id/CurrentPrince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.currentPrice}"/>

    <TextView
        android:text="@string/PreviousDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/PreviousDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.previousDay}"/>

    <TextView
        android:text="@string/DayBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/DayBefore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.dayBefore}" />

    <TextView
        android:text="@string/HighPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/HighPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.highPrice}"/>

    <TextView
        android:text="@string/LowPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>

    <TextView
        android:id="@+id/LowPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.lowPrice}"/>

    <TextView
        android:text="@string/Volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"/>
    
    <TextView
        android:id="@+id/Volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@{includeDB.volumeData}"/>

</LinearLayout>
</ScrollView>

</layout>